parser.output
Terminals unused in grammar

   TOKEN_ERROR


Grammar

    0 $accept: Codigo $end

    1 Codigo: %empty
    2       | Codigo Declaracoes

    3 Declaracoes: De_Globais ';'
    4            | De_Funcoes

    5 De_Globais: De_Glo_Var_Simples

    6 De_Glo_Var_Simples: Tipo Identificador '=' Valor
    7                   | Tipo '#' Identificador '=' Valor

    8 De_Globais: De_Glo_Var_Vetor

    9 De_Glo_Var_Vetor: Tipo Identificador '[' LIT_INTEGER ']' ':' Valores
   10                 | Tipo Identificador '[' LIT_INTEGER ']'

   11 De_Funcoes: Fun_Cabecalho Fun_Corpo

   12 Fun_Cabecalho: Tipo Identificador '(' Fun_Parametros ')'

   13 Fun_Parametros: %empty
   14               | Fun_Com_Parametros

   15 Fun_Com_Parametros: Parametro
   16                   | Fun_Com_Parametros ',' Parametro

   17 Parametro: Tipo Identificador

   18 Fun_Corpo: Bloco

   19 Fun_Chamada: Identificador '(' Fun_Cha_Parametros ')'

   20 Fun_Cha_Parametros: %empty
   21                   | Fun_Cha_Com_Parametros

   22 Fun_Cha_Com_Parametros: Cha_Parametro
   23                       | Fun_Cha_Com_Parametros ',' Cha_Parametro

   24 Cha_Parametro: Expressao

   25 Lista_Comandos: Comando_Simples
   26               | Lista_Comandos ';' Comando_Simples

   27 Comando_Simples: %empty
   28                | Bloco
   29                | Atribuicao
   30                | If
   31                | If_Else
   32                | While
   33                | For
   34                | Read
   35                | Print
   36                | Return

   37 Bloco: '{' Lista_Comandos '}'

   38 Atribuicao: Identificador '=' Expressao
   39           | Identificador '[' Expressao ']' '=' Expressao

   40 If: KW_IF '(' Expressao ')' KW_THEN Comando_Simples

   41 If_Else: KW_IF '(' Expressao ')' KW_THEN Comando_Simples KW_ELSE Comando_Simples

   42 While: KW_WHILE '(' Expressao ')' Comando_Simples

   43 For: KW_FOR '(' Identificador '=' Expressao KW_TO Expressao ')' Comando_Simples

   44 Read: KW_READ Identificador

   45 Print: KW_PRINT Lista_Print

   46 Lista_Print: Printavel
   47            | Lista_Print ',' Printavel

   48 Printavel: Expressao
   49          | LIT_STRING

   50 Return: KW_RETURN Expressao

   51 Expressao: Operando
   52          | '(' Expressao ')'
   53          | Expressao '+' Expressao
   54          | Expressao '-' Expressao
   55          | Expressao '*' Expressao
   56          | Expressao '/' Expressao
   57          | Expressao '<' Expressao
   58          | Expressao '>' Expressao
   59          | Expressao OPERATOR_LE Expressao
   60          | Expressao OPERATOR_GE Expressao
   61          | Expressao OPERATOR_EQ Expressao
   62          | Expressao OPERATOR_NE Expressao
   63          | Expressao OPERATOR_AND Expressao
   64          | Expressao OPERATOR_OR Expressao
   65          | '!' Expressao
   66          | '(' '-' Expressao ')'

   67 Operando: LIT_INTEGER
   68         | LIT_REAL
   69         | LIT_CHAR
   70         | Identificador
   71         | '#' TK_IDENTIFIER
   72         | '&' TK_IDENTIFIER
   73         | Identificador '[' Expressao ']'
   74         | Fun_Chamada

   75 Tipo: KW_CHAR
   76     | KW_INT
   77     | KW_FLOAT

   78 Valores: Valor
   79        | Valores Valor

   80 Valor: LIT_INTEGER
   81      | LIT_REAL
   82      | LIT_CHAR
   83      | LIT_STRING

   84 Identificador: TK_IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
'!' (33) 65
'#' (35) 7 71
'&' (38) 72
'(' (40) 12 19 40 41 42 43 52 66
')' (41) 12 19 40 41 42 43 52 66
'*' (42) 55
'+' (43) 53
',' (44) 16 23 47
'-' (45) 54 66
'/' (47) 56
':' (58) 9
';' (59) 3 26
'<' (60) 57
'=' (61) 6 7 38 39 43
'>' (62) 58
'[' (91) 9 10 39 73
']' (93) 9 10 39 73
'{' (123) 37
'}' (125) 37
error (256)
KW_CHAR (258) 75
KW_INT (259) 76
KW_FLOAT (260) 77
KW_IF (261) 40 41
KW_THEN (262) 40 41
KW_ELSE (263) 41
KW_WHILE (264) 42
KW_FOR (265) 43
KW_TO (266) 43
KW_READ (267) 44
KW_RETURN (268) 50
KW_PRINT (269) 45
OPERATOR_LE (270) 59
OPERATOR_GE (271) 60
OPERATOR_EQ (272) 61
OPERATOR_NE (273) 62
OPERATOR_AND (274) 63
OPERATOR_OR (275) 64
TK_IDENTIFIER (276) 71 72 84
LIT_INTEGER (277) 9 10 67 80
LIT_REAL (278) 68 81
LIT_CHAR (279) 69 82
LIT_STRING (280) 49 83
TOKEN_ERROR (281)


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
Codigo (47)
    on left: 1 2, on right: 0 2
Declaracoes (48)
    on left: 3 4, on right: 2
De_Globais (49)
    on left: 5 8, on right: 3
De_Glo_Var_Simples (50)
    on left: 6 7, on right: 5
De_Glo_Var_Vetor (51)
    on left: 9 10, on right: 8
De_Funcoes (52)
    on left: 11, on right: 4
Fun_Cabecalho (53)
    on left: 12, on right: 11
Fun_Parametros (54)
    on left: 13 14, on right: 12
Fun_Com_Parametros (55)
    on left: 15 16, on right: 14 16
Parametro (56)
    on left: 17, on right: 15 16
Fun_Corpo (57)
    on left: 18, on right: 11
Fun_Chamada (58)
    on left: 19, on right: 74
Fun_Cha_Parametros (59)
    on left: 20 21, on right: 19
Fun_Cha_Com_Parametros (60)
    on left: 22 23, on right: 21 23
Cha_Parametro (61)
    on left: 24, on right: 22 23
Lista_Comandos (62)
    on left: 25 26, on right: 26 37
Comando_Simples (63)
    on left: 27 28 29 30 31 32 33 34 35 36, on right: 25 26 40 41 42
    43
Bloco (64)
    on left: 37, on right: 18 28
Atribuicao (65)
    on left: 38 39, on right: 29
If (66)
    on left: 40, on right: 30
If_Else (67)
    on left: 41, on right: 31
While (68)
    on left: 42, on right: 32
For (69)
    on left: 43, on right: 33
Read (70)
    on left: 44, on right: 34
Print (71)
    on left: 45, on right: 35
Lista_Print (72)
    on left: 46 47, on right: 45 47
Printavel (73)
    on left: 48 49, on right: 46 47
Return (74)
    on left: 50, on right: 36
Expressao (75)
    on left: 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66, on right:
    24 38 39 40 41 42 43 48 50 52 53 54 55 56 57 58 59 60 61 62 63
    64 65 66 73
Operando (76)
    on left: 67 68 69 70 71 72 73 74, on right: 51
Tipo (77)
    on left: 75 76 77, on right: 6 7 9 10 12 17
Valores (78)
    on left: 78 79, on right: 9 79
Valor (79)
    on left: 80 81 82 83, on right: 6 7 78 79
Identificador (80)
    on left: 84, on right: 6 7 9 10 12 17 19 38 39 43 44 70 73


State 0

    0 $accept: . Codigo $end

    $default  reduce using rule 1 (Codigo)

    Codigo  go to state 1


State 1

    0 $accept: Codigo . $end
    2 Codigo: Codigo . Declaracoes

    $end      shift, and go to state 2
    KW_CHAR   shift, and go to state 3
    KW_INT    shift, and go to state 4
    KW_FLOAT  shift, and go to state 5

    Declaracoes         go to state 6
    De_Globais          go to state 7
    De_Glo_Var_Simples  go to state 8
    De_Glo_Var_Vetor    go to state 9
    De_Funcoes          go to state 10
    Fun_Cabecalho       go to state 11
    Tipo                go to state 12


State 2

    0 $accept: Codigo $end .

    $default  accept


State 3

   75 Tipo: KW_CHAR .

    $default  reduce using rule 75 (Tipo)


State 4

   76 Tipo: KW_INT .

    $default  reduce using rule 76 (Tipo)


State 5

   77 Tipo: KW_FLOAT .

    $default  reduce using rule 77 (Tipo)


State 6

    2 Codigo: Codigo Declaracoes .

    $default  reduce using rule 2 (Codigo)


State 7

    3 Declaracoes: De_Globais . ';'

    ';'  shift, and go to state 13


State 8

    5 De_Globais: De_Glo_Var_Simples .

    $default  reduce using rule 5 (De_Globais)


State 9

    8 De_Globais: De_Glo_Var_Vetor .

    $default  reduce using rule 8 (De_Globais)


State 10

    4 Declaracoes: De_Funcoes .

    $default  reduce using rule 4 (Declaracoes)


State 11

   11 De_Funcoes: Fun_Cabecalho . Fun_Corpo

    '{'  shift, and go to state 14

    Fun_Corpo  go to state 15
    Bloco      go to state 16


State 12

    6 De_Glo_Var_Simples: Tipo . Identificador '=' Valor
    7                   | Tipo . '#' Identificador '=' Valor
    9 De_Glo_Var_Vetor: Tipo . Identificador '[' LIT_INTEGER ']' ':' Valores
   10                 | Tipo . Identificador '[' LIT_INTEGER ']'
   12 Fun_Cabecalho: Tipo . Identificador '(' Fun_Parametros ')'

    TK_IDENTIFIER  shift, and go to state 17
    '#'            shift, and go to state 18

    Identificador  go to state 19


State 13

    3 Declaracoes: De_Globais ';' .

    $default  reduce using rule 3 (Declaracoes)


State 14

   37 Bloco: '{' . Lista_Comandos '}'

    KW_IF          shift, and go to state 20
    KW_WHILE       shift, and go to state 21
    KW_FOR         shift, and go to state 22
    KW_READ        shift, and go to state 23
    KW_RETURN      shift, and go to state 24
    KW_PRINT       shift, and go to state 25
    TK_IDENTIFIER  shift, and go to state 17
    '{'            shift, and go to state 14

    $default  reduce using rule 27 (Comando_Simples)

    Lista_Comandos   go to state 26
    Comando_Simples  go to state 27
    Bloco            go to state 28
    Atribuicao       go to state 29
    If               go to state 30
    If_Else          go to state 31
    While            go to state 32
    For              go to state 33
    Read             go to state 34
    Print            go to state 35
    Return           go to state 36
    Identificador    go to state 37


State 15

   11 De_Funcoes: Fun_Cabecalho Fun_Corpo .

    $default  reduce using rule 11 (De_Funcoes)


State 16

   18 Fun_Corpo: Bloco .

    $default  reduce using rule 18 (Fun_Corpo)


State 17

   84 Identificador: TK_IDENTIFIER .

    $default  reduce using rule 84 (Identificador)


State 18

    7 De_Glo_Var_Simples: Tipo '#' . Identificador '=' Valor

    TK_IDENTIFIER  shift, and go to state 17

    Identificador  go to state 38


State 19

    6 De_Glo_Var_Simples: Tipo Identificador . '=' Valor
    9 De_Glo_Var_Vetor: Tipo Identificador . '[' LIT_INTEGER ']' ':' Valores
   10                 | Tipo Identificador . '[' LIT_INTEGER ']'
   12 Fun_Cabecalho: Tipo Identificador . '(' Fun_Parametros ')'

    '['  shift, and go to state 39
    '('  shift, and go to state 40
    '='  shift, and go to state 41


State 20

   40 If: KW_IF . '(' Expressao ')' KW_THEN Comando_Simples
   41 If_Else: KW_IF . '(' Expressao ')' KW_THEN Comando_Simples KW_ELSE Comando_Simples

    '('  shift, and go to state 42


State 21

   42 While: KW_WHILE . '(' Expressao ')' Comando_Simples

    '('  shift, and go to state 43


State 22

   43 For: KW_FOR . '(' Identificador '=' Expressao KW_TO Expressao ')' Comando_Simples

    '('  shift, and go to state 44


State 23

   44 Read: KW_READ . Identificador

    TK_IDENTIFIER  shift, and go to state 17

    Identificador  go to state 45


State 24

   50 Return: KW_RETURN . Expressao

    TK_IDENTIFIER  shift, and go to state 17
    LIT_INTEGER    shift, and go to state 46
    LIT_REAL       shift, and go to state 47
    LIT_CHAR       shift, and go to state 48
    '!'            shift, and go to state 49
    '('            shift, and go to state 50
    '#'            shift, and go to state 51
    '&'            shift, and go to state 52

    Fun_Chamada    go to state 53
    Expressao      go to state 54
    Operando       go to state 55
    Identificador  go to state 56


State 25

   45 Print: KW_PRINT . Lista_Print

    TK_IDENTIFIER  shift, and go to state 17
    LIT_INTEGER    shift, and go to state 46
    LIT_REAL       shift, and go to state 47
    LIT_CHAR       shift, and go to state 48
    LIT_STRING     shift, and go to state 57
    '!'            shift, and go to state 49
    '('            shift, and go to state 50
    '#'            shift, and go to state 51
    '&'            shift, and go to state 52

    Fun_Chamada    go to state 53
    Lista_Print    go to state 58
    Printavel      go to state 59
    Expressao      go to state 60
    Operando       go to state 55
    Identificador  go to state 56


State 26

   26 Lista_Comandos: Lista_Comandos . ';' Comando_Simples
   37 Bloco: '{' Lista_Comandos . '}'

    ';'  shift, and go to state 61
    '}'  shift, and go to state 62


State 27

   25 Lista_Comandos: Comando_Simples .

    $default  reduce using rule 25 (Lista_Comandos)


State 28

   28 Comando_Simples: Bloco .

    $default  reduce using rule 28 (Comando_Simples)


State 29

   29 Comando_Simples: Atribuicao .

    $default  reduce using rule 29 (Comando_Simples)


State 30

   30 Comando_Simples: If .

    $default  reduce using rule 30 (Comando_Simples)


State 31

   31 Comando_Simples: If_Else .

    $default  reduce using rule 31 (Comando_Simples)


State 32

   32 Comando_Simples: While .

    $default  reduce using rule 32 (Comando_Simples)


State 33

   33 Comando_Simples: For .

    $default  reduce using rule 33 (Comando_Simples)


State 34

   34 Comando_Simples: Read .

    $default  reduce using rule 34 (Comando_Simples)


State 35

   35 Comando_Simples: Print .

    $default  reduce using rule 35 (Comando_Simples)


State 36

   36 Comando_Simples: Return .

    $default  reduce using rule 36 (Comando_Simples)


State 37

   38 Atribuicao: Identificador . '=' Expressao
   39           | Identificador . '[' Expressao ']' '=' Expressao

    '['  shift, and go to state 63
    '='  shift, and go to state 64


State 38

    7 De_Glo_Var_Simples: Tipo '#' Identificador . '=' Valor

    '='  shift, and go to state 65


State 39

    9 De_Glo_Var_Vetor: Tipo Identificador '[' . LIT_INTEGER ']' ':' Valores
   10                 | Tipo Identificador '[' . LIT_INTEGER ']'

    LIT_INTEGER  shift, and go to state 66


State 40

   12 Fun_Cabecalho: Tipo Identificador '(' . Fun_Parametros ')'

    KW_CHAR   shift, and go to state 3
    KW_INT    shift, and go to state 4
    KW_FLOAT  shift, and go to state 5

    $default  reduce using rule 13 (Fun_Parametros)

    Fun_Parametros      go to state 67
    Fun_Com_Parametros  go to state 68
    Parametro           go to state 69
    Tipo                go to state 70


State 41

    6 De_Glo_Var_Simples: Tipo Identificador '=' . Valor

    LIT_INTEGER  shift, and go to state 71
    LIT_REAL     shift, and go to state 72
    LIT_CHAR     shift, and go to state 73
    LIT_STRING   shift, and go to state 74

    Valor  go to state 75


State 42

   40 If: KW_IF '(' . Expressao ')' KW_THEN Comando_Simples
   41 If_Else: KW_IF '(' . Expressao ')' KW_THEN Comando_Simples KW_ELSE Comando_Simples

    TK_IDENTIFIER  shift, and go to state 17
    LIT_INTEGER    shift, and go to state 46
    LIT_REAL       shift, and go to state 47
    LIT_CHAR       shift, and go to state 48
    '!'            shift, and go to state 49
    '('            shift, and go to state 50
    '#'            shift, and go to state 51
    '&'            shift, and go to state 52

    Fun_Chamada    go to state 53
    Expressao      go to state 76
    Operando       go to state 55
    Identificador  go to state 56


State 43

   42 While: KW_WHILE '(' . Expressao ')' Comando_Simples

    TK_IDENTIFIER  shift, and go to state 17
    LIT_INTEGER    shift, and go to state 46
    LIT_REAL       shift, and go to state 47
    LIT_CHAR       shift, and go to state 48
    '!'            shift, and go to state 49
    '('            shift, and go to state 50
    '#'            shift, and go to state 51
    '&'            shift, and go to state 52

    Fun_Chamada    go to state 53
    Expressao      go to state 77
    Operando       go to state 55
    Identificador  go to state 56


State 44

   43 For: KW_FOR '(' . Identificador '=' Expressao KW_TO Expressao ')' Comando_Simples

    TK_IDENTIFIER  shift, and go to state 17

    Identificador  go to state 78


State 45

   44 Read: KW_READ Identificador .

    $default  reduce using rule 44 (Read)


State 46

   67 Operando: LIT_INTEGER .

    $default  reduce using rule 67 (Operando)


State 47

   68 Operando: LIT_REAL .

    $default  reduce using rule 68 (Operando)


State 48

   69 Operando: LIT_CHAR .

    $default  reduce using rule 69 (Operando)


State 49

   65 Expressao: '!' . Expressao

    TK_IDENTIFIER  shift, and go to state 17
    LIT_INTEGER    shift, and go to state 46
    LIT_REAL       shift, and go to state 47
    LIT_CHAR       shift, and go to state 48
    '!'            shift, and go to state 49
    '('            shift, and go to state 50
    '#'            shift, and go to state 51
    '&'            shift, and go to state 52

    Fun_Chamada    go to state 53
    Expressao      go to state 79
    Operando       go to state 55
    Identificador  go to state 56


State 50

   52 Expressao: '(' . Expressao ')'
   66          | '(' . '-' Expressao ')'

    TK_IDENTIFIER  shift, and go to state 17
    LIT_INTEGER    shift, and go to state 46
    LIT_REAL       shift, and go to state 47
    LIT_CHAR       shift, and go to state 48
    '!'            shift, and go to state 49
    '-'            shift, and go to state 80
    '('            shift, and go to state 50
    '#'            shift, and go to state 51
    '&'            shift, and go to state 52

    Fun_Chamada    go to state 53
    Expressao      go to state 81
    Operando       go to state 55
    Identificador  go to state 56


State 51

   71 Operando: '#' . TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 82


State 52

   72 Operando: '&' . TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 83


State 53

   74 Operando: Fun_Chamada .

    $default  reduce using rule 74 (Operando)


State 54

   50 Return: KW_RETURN Expressao .
   53 Expressao: Expressao . '+' Expressao
   54          | Expressao . '-' Expressao
   55          | Expressao . '*' Expressao
   56          | Expressao . '/' Expressao
   57          | Expressao . '<' Expressao
   58          | Expressao . '>' Expressao
   59          | Expressao . OPERATOR_LE Expressao
   60          | Expressao . OPERATOR_GE Expressao
   61          | Expressao . OPERATOR_EQ Expressao
   62          | Expressao . OPERATOR_NE Expressao
   63          | Expressao . OPERATOR_AND Expressao
   64          | Expressao . OPERATOR_OR Expressao

    OPERATOR_LE   shift, and go to state 84
    OPERATOR_GE   shift, and go to state 85
    OPERATOR_EQ   shift, and go to state 86
    OPERATOR_NE   shift, and go to state 87
    OPERATOR_AND  shift, and go to state 88
    OPERATOR_OR   shift, and go to state 89
    '<'           shift, and go to state 90
    '>'           shift, and go to state 91
    '*'           shift, and go to state 92
    '/'           shift, and go to state 93
    '+'           shift, and go to state 94
    '-'           shift, and go to state 95

    $default  reduce using rule 50 (Return)


State 55

   51 Expressao: Operando .

    $default  reduce using rule 51 (Expressao)


State 56

   19 Fun_Chamada: Identificador . '(' Fun_Cha_Parametros ')'
   70 Operando: Identificador .
   73         | Identificador . '[' Expressao ']'

    '['  shift, and go to state 96
    '('  shift, and go to state 97

    $default  reduce using rule 70 (Operando)


State 57

   49 Printavel: LIT_STRING .

    $default  reduce using rule 49 (Printavel)


State 58

   45 Print: KW_PRINT Lista_Print .
   47 Lista_Print: Lista_Print . ',' Printavel

    ','  shift, and go to state 98

    $default  reduce using rule 45 (Print)


State 59

   46 Lista_Print: Printavel .

    $default  reduce using rule 46 (Lista_Print)


State 60

   48 Printavel: Expressao .
   53 Expressao: Expressao . '+' Expressao
   54          | Expressao . '-' Expressao
   55          | Expressao . '*' Expressao
   56          | Expressao . '/' Expressao
   57          | Expressao . '<' Expressao
   58          | Expressao . '>' Expressao
   59          | Expressao . OPERATOR_LE Expressao
   60          | Expressao . OPERATOR_GE Expressao
   61          | Expressao . OPERATOR_EQ Expressao
   62          | Expressao . OPERATOR_NE Expressao
   63          | Expressao . OPERATOR_AND Expressao
   64          | Expressao . OPERATOR_OR Expressao

    OPERATOR_LE   shift, and go to state 84
    OPERATOR_GE   shift, and go to state 85
    OPERATOR_EQ   shift, and go to state 86
    OPERATOR_NE   shift, and go to state 87
    OPERATOR_AND  shift, and go to state 88
    OPERATOR_OR   shift, and go to state 89
    '<'           shift, and go to state 90
    '>'           shift, and go to state 91
    '*'           shift, and go to state 92
    '/'           shift, and go to state 93
    '+'           shift, and go to state 94
    '-'           shift, and go to state 95

    $default  reduce using rule 48 (Printavel)


State 61

   26 Lista_Comandos: Lista_Comandos ';' . Comando_Simples

    KW_IF          shift, and go to state 20
    KW_WHILE       shift, and go to state 21
    KW_FOR         shift, and go to state 22
    KW_READ        shift, and go to state 23
    KW_RETURN      shift, and go to state 24
    KW_PRINT       shift, and go to state 25
    TK_IDENTIFIER  shift, and go to state 17
    '{'            shift, and go to state 14

    $default  reduce using rule 27 (Comando_Simples)

    Comando_Simples  go to state 99
    Bloco            go to state 28
    Atribuicao       go to state 29
    If               go to state 30
    If_Else          go to state 31
    While            go to state 32
    For              go to state 33
    Read             go to state 34
    Print            go to state 35
    Return           go to state 36
    Identificador    go to state 37


State 62

   37 Bloco: '{' Lista_Comandos '}' .

    $default  reduce using rule 37 (Bloco)


State 63

   39 Atribuicao: Identificador '[' . Expressao ']' '=' Expressao

    TK_IDENTIFIER  shift, and go to state 17
    LIT_INTEGER    shift, and go to state 46
    LIT_REAL       shift, and go to state 47
    LIT_CHAR       shift, and go to state 48
    '!'            shift, and go to state 49
    '('            shift, and go to state 50
    '#'            shift, and go to state 51
    '&'            shift, and go to state 52

    Fun_Chamada    go to state 53
    Expressao      go to state 100
    Operando       go to state 55
    Identificador  go to state 56


State 64

   38 Atribuicao: Identificador '=' . Expressao

    TK_IDENTIFIER  shift, and go to state 17
    LIT_INTEGER    shift, and go to state 46
    LIT_REAL       shift, and go to state 47
    LIT_CHAR       shift, and go to state 48
    '!'            shift, and go to state 49
    '('            shift, and go to state 50
    '#'            shift, and go to state 51
    '&'            shift, and go to state 52

    Fun_Chamada    go to state 53
    Expressao      go to state 101
    Operando       go to state 55
    Identificador  go to state 56


State 65

    7 De_Glo_Var_Simples: Tipo '#' Identificador '=' . Valor

    LIT_INTEGER  shift, and go to state 71
    LIT_REAL     shift, and go to state 72
    LIT_CHAR     shift, and go to state 73
    LIT_STRING   shift, and go to state 74

    Valor  go to state 102


State 66

    9 De_Glo_Var_Vetor: Tipo Identificador '[' LIT_INTEGER . ']' ':' Valores
   10                 | Tipo Identificador '[' LIT_INTEGER . ']'

    ']'  shift, and go to state 103


State 67

   12 Fun_Cabecalho: Tipo Identificador '(' Fun_Parametros . ')'

    ')'  shift, and go to state 104


State 68

   14 Fun_Parametros: Fun_Com_Parametros .
   16 Fun_Com_Parametros: Fun_Com_Parametros . ',' Parametro

    ','  shift, and go to state 105

    $default  reduce using rule 14 (Fun_Parametros)


State 69

   15 Fun_Com_Parametros: Parametro .

    $default  reduce using rule 15 (Fun_Com_Parametros)


State 70

   17 Parametro: Tipo . Identificador

    TK_IDENTIFIER  shift, and go to state 17

    Identificador  go to state 106


State 71

   80 Valor: LIT_INTEGER .

    $default  reduce using rule 80 (Valor)


State 72

   81 Valor: LIT_REAL .

    $default  reduce using rule 81 (Valor)


State 73

   82 Valor: LIT_CHAR .

    $default  reduce using rule 82 (Valor)


State 74

   83 Valor: LIT_STRING .

    $default  reduce using rule 83 (Valor)


State 75

    6 De_Glo_Var_Simples: Tipo Identificador '=' Valor .

    $default  reduce using rule 6 (De_Glo_Var_Simples)


State 76

   40 If: KW_IF '(' Expressao . ')' KW_THEN Comando_Simples
   41 If_Else: KW_IF '(' Expressao . ')' KW_THEN Comando_Simples KW_ELSE Comando_Simples
   53 Expressao: Expressao . '+' Expressao
   54          | Expressao . '-' Expressao
   55          | Expressao . '*' Expressao
   56          | Expressao . '/' Expressao
   57          | Expressao . '<' Expressao
   58          | Expressao . '>' Expressao
   59          | Expressao . OPERATOR_LE Expressao
   60          | Expressao . OPERATOR_GE Expressao
   61          | Expressao . OPERATOR_EQ Expressao
   62          | Expressao . OPERATOR_NE Expressao
   63          | Expressao . OPERATOR_AND Expressao
   64          | Expressao . OPERATOR_OR Expressao

    OPERATOR_LE   shift, and go to state 84
    OPERATOR_GE   shift, and go to state 85
    OPERATOR_EQ   shift, and go to state 86
    OPERATOR_NE   shift, and go to state 87
    OPERATOR_AND  shift, and go to state 88
    OPERATOR_OR   shift, and go to state 89
    '<'           shift, and go to state 90
    '>'           shift, and go to state 91
    '*'           shift, and go to state 92
    '/'           shift, and go to state 93
    '+'           shift, and go to state 94
    '-'           shift, and go to state 95
    ')'           shift, and go to state 107


State 77

   42 While: KW_WHILE '(' Expressao . ')' Comando_Simples
   53 Expressao: Expressao . '+' Expressao
   54          | Expressao . '-' Expressao
   55          | Expressao . '*' Expressao
   56          | Expressao . '/' Expressao
   57          | Expressao . '<' Expressao
   58          | Expressao . '>' Expressao
   59          | Expressao . OPERATOR_LE Expressao
   60          | Expressao . OPERATOR_GE Expressao
   61          | Expressao . OPERATOR_EQ Expressao
   62          | Expressao . OPERATOR_NE Expressao
   63          | Expressao . OPERATOR_AND Expressao
   64          | Expressao . OPERATOR_OR Expressao

    OPERATOR_LE   shift, and go to state 84
    OPERATOR_GE   shift, and go to state 85
    OPERATOR_EQ   shift, and go to state 86
    OPERATOR_NE   shift, and go to state 87
    OPERATOR_AND  shift, and go to state 88
    OPERATOR_OR   shift, and go to state 89
    '<'           shift, and go to state 90
    '>'           shift, and go to state 91
    '*'           shift, and go to state 92
    '/'           shift, and go to state 93
    '+'           shift, and go to state 94
    '-'           shift, and go to state 95
    ')'           shift, and go to state 108


State 78

   43 For: KW_FOR '(' Identificador . '=' Expressao KW_TO Expressao ')' Comando_Simples

    '='  shift, and go to state 109


State 79

   53 Expressao: Expressao . '+' Expressao
   54          | Expressao . '-' Expressao
   55          | Expressao . '*' Expressao
   56          | Expressao . '/' Expressao
   57          | Expressao . '<' Expressao
   58          | Expressao . '>' Expressao
   59          | Expressao . OPERATOR_LE Expressao
   60          | Expressao . OPERATOR_GE Expressao
   61          | Expressao . OPERATOR_EQ Expressao
   62          | Expressao . OPERATOR_NE Expressao
   63          | Expressao . OPERATOR_AND Expressao
   64          | Expressao . OPERATOR_OR Expressao
   65          | '!' Expressao .

    '*'  shift, and go to state 92
    '/'  shift, and go to state 93
    '+'  shift, and go to state 94
    '-'  shift, and go to state 95

    $default  reduce using rule 65 (Expressao)


State 80

   66 Expressao: '(' '-' . Expressao ')'

    TK_IDENTIFIER  shift, and go to state 17
    LIT_INTEGER    shift, and go to state 46
    LIT_REAL       shift, and go to state 47
    LIT_CHAR       shift, and go to state 48
    '!'            shift, and go to state 49
    '('            shift, and go to state 50
    '#'            shift, and go to state 51
    '&'            shift, and go to state 52

    Fun_Chamada    go to state 53
    Expressao      go to state 110
    Operando       go to state 55
    Identificador  go to state 56


State 81

   52 Expressao: '(' Expressao . ')'
   53          | Expressao . '+' Expressao
   54          | Expressao . '-' Expressao
   55          | Expressao . '*' Expressao
   56          | Expressao . '/' Expressao
   57          | Expressao . '<' Expressao
   58          | Expressao . '>' Expressao
   59          | Expressao . OPERATOR_LE Expressao
   60          | Expressao . OPERATOR_GE Expressao
   61          | Expressao . OPERATOR_EQ Expressao
   62          | Expressao . OPERATOR_NE Expressao
   63          | Expressao . OPERATOR_AND Expressao
   64          | Expressao . OPERATOR_OR Expressao

    OPERATOR_LE   shift, and go to state 84
    OPERATOR_GE   shift, and go to state 85
    OPERATOR_EQ   shift, and go to state 86
    OPERATOR_NE   shift, and go to state 87
    OPERATOR_AND  shift, and go to state 88
    OPERATOR_OR   shift, and go to state 89
    '<'           shift, and go to state 90
    '>'           shift, and go to state 91
    '*'           shift, and go to state 92
    '/'           shift, and go to state 93
    '+'           shift, and go to state 94
    '-'           shift, and go to state 95
    ')'           shift, and go to state 111


State 82

   71 Operando: '#' TK_IDENTIFIER .

    $default  reduce using rule 71 (Operando)


State 83

   72 Operando: '&' TK_IDENTIFIER .

    $default  reduce using rule 72 (Operando)


State 84

   59 Expressao: Expressao OPERATOR_LE . Expressao

    TK_IDENTIFIER  shift, and go to state 17
    LIT_INTEGER    shift, and go to state 46
    LIT_REAL       shift, and go to state 47
    LIT_CHAR       shift, and go to state 48
    '!'            shift, and go to state 49
    '('            shift, and go to state 50
    '#'            shift, and go to state 51
    '&'            shift, and go to state 52

    Fun_Chamada    go to state 53
    Expressao      go to state 112
    Operando       go to state 55
    Identificador  go to state 56


State 85

   60 Expressao: Expressao OPERATOR_GE . Expressao

    TK_IDENTIFIER  shift, and go to state 17
    LIT_INTEGER    shift, and go to state 46
    LIT_REAL       shift, and go to state 47
    LIT_CHAR       shift, and go to state 48
    '!'            shift, and go to state 49
    '('            shift, and go to state 50
    '#'            shift, and go to state 51
    '&'            shift, and go to state 52

    Fun_Chamada    go to state 53
    Expressao      go to state 113
    Operando       go to state 55
    Identificador  go to state 56


State 86

   61 Expressao: Expressao OPERATOR_EQ . Expressao

    TK_IDENTIFIER  shift, and go to state 17
    LIT_INTEGER    shift, and go to state 46
    LIT_REAL       shift, and go to state 47
    LIT_CHAR       shift, and go to state 48
    '!'            shift, and go to state 49
    '('            shift, and go to state 50
    '#'            shift, and go to state 51
    '&'            shift, and go to state 52

    Fun_Chamada    go to state 53
    Expressao      go to state 114
    Operando       go to state 55
    Identificador  go to state 56


State 87

   62 Expressao: Expressao OPERATOR_NE . Expressao

    TK_IDENTIFIER  shift, and go to state 17
    LIT_INTEGER    shift, and go to state 46
    LIT_REAL       shift, and go to state 47
    LIT_CHAR       shift, and go to state 48
    '!'            shift, and go to state 49
    '('            shift, and go to state 50
    '#'            shift, and go to state 51
    '&'            shift, and go to state 52

    Fun_Chamada    go to state 53
    Expressao      go to state 115
    Operando       go to state 55
    Identificador  go to state 56


State 88

   63 Expressao: Expressao OPERATOR_AND . Expressao

    TK_IDENTIFIER  shift, and go to state 17
    LIT_INTEGER    shift, and go to state 46
    LIT_REAL       shift, and go to state 47
    LIT_CHAR       shift, and go to state 48
    '!'            shift, and go to state 49
    '('            shift, and go to state 50
    '#'            shift, and go to state 51
    '&'            shift, and go to state 52

    Fun_Chamada    go to state 53
    Expressao      go to state 116
    Operando       go to state 55
    Identificador  go to state 56


State 89

   64 Expressao: Expressao OPERATOR_OR . Expressao

    TK_IDENTIFIER  shift, and go to state 17
    LIT_INTEGER    shift, and go to state 46
    LIT_REAL       shift, and go to state 47
    LIT_CHAR       shift, and go to state 48
    '!'            shift, and go to state 49
    '('            shift, and go to state 50
    '#'            shift, and go to state 51
    '&'            shift, and go to state 52

    Fun_Chamada    go to state 53
    Expressao      go to state 117
    Operando       go to state 55
    Identificador  go to state 56


State 90

   57 Expressao: Expressao '<' . Expressao

    TK_IDENTIFIER  shift, and go to state 17
    LIT_INTEGER    shift, and go to state 46
    LIT_REAL       shift, and go to state 47
    LIT_CHAR       shift, and go to state 48
    '!'            shift, and go to state 49
    '('            shift, and go to state 50
    '#'            shift, and go to state 51
    '&'            shift, and go to state 52

    Fun_Chamada    go to state 53
    Expressao      go to state 118
    Operando       go to state 55
    Identificador  go to state 56


State 91

   58 Expressao: Expressao '>' . Expressao
